--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"chroma-js": "^2.1.0",
 		"core-js": "^3.6.5",
 		"vue": "^3.0.0-0"
 	},
@@ -20,6 +21,8 @@
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^7.0.0-0",
 		"node-sass": "^4.14.1",
+		"pug": "^3.0.0",
+		"pug-plain-loader": "^1.0.0",
 		"sass": "^1.26.10"
 	},
 	"eslintConfig": {
