--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^7.0.0-0",
+		"fabric": "^4.1.0",
 		"node-sass": "^4.14.1",
 		"pug": "^3.0.0",
 		"pug-plain-loader": "^1.0.0",
